--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/home/sebastien/git/ILO-Maths/lib/jchart2d-3.2.2.jar"/>
+	<classpathentry kind="lib" path="/home/sebastien/git/ILO-Maths/lib/jide-oss-2.9.7.jar"/>
+	<classpathentry kind="lib" path="/home/sebastien/git/ILO-Maths/lib/xmlgraphics-commons-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
